--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Page Title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
   </head>
   <body>
-    <h1>Woooohooow this is my first page :)</h1>
-    <p>This is a paragraph.</p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-      tempora sint est culpa, aperiam natus inventore necessitatibus autem velit
-      perspiciatis qui adipisci possimus excepturi laborum in hic saepe expedita
-      consequatur?
-    </p>
+    <header>
+      <nav>
+        <a href="">Home</a>
+        <a href="">About Us</a>
+        <a href="">Contact Us</a>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h1>Section 1</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+          explicabo dolorem, in sint earum hic soluta sunt numquam aspernatur
+          quia dolores id distinctio repudiandae obcaecati illum recusandae,
+          animi, aliquid sapiente!
+        </p>
+      </section>
+    </main>
   </body>
 </html>
